# babyl4-stone-test

./: .ghcid  .gitignore  README.md  all.js  cabal.project  default.nix  hie.yaml  makefile  project.nix  reflex-stone.cabal  result  shell-ghcjs.nix  simple.nix
.github/workflows/: publish.yaml
docs/: all.js
frontend/: reflex-stone.cabal
frontend/src/: InnerMain.hs  Main.hs
frontend/src/Widgets/Common/: TabbedWindow.hs
frontend/src/Widgets/Page/: TwoWindow.hs
frontend/src/Widgets/Page/TwoWindow/OutputWindow/: ASTTab.hs  JSEcho.hs
src/: Editor.hs  Helpers.hs  Main.hs  StringUtils.hs  Style.hs
src/Utils/: L4D3Json.hs  String.hs  Style.hs
src/Widgets/: Common.hs
src/Widgets/Common/: Editor.hs  TabbedWindow.hs
src/Widgets/Page/: TwoWindow.hs
src/Widgets/Page/TwoWindow/: OutputWindow.hs  Style.hs
src/Widgets/Page/TwoWindow/OutputWindow/: ASTTab.hs  JSEcho.hs
static/: d3.js
static/js/: d3.js  theme.js
static/themes/: dark.json  light.json
tmp/source/: .gitignore  cabal.project  project.nix  reflex-stone.cabal
tmp/source/.github/workflows/: publish.yaml
tmp/source/src/: Editor.hs
