cabal-version:      >=1.10
name:               reflex-stone
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
author:             Sridhar Ratnakumar
maintainer:         srid@srid.ca
build-type:         Simple
extra-source-files: README.md

executable reflex-stone
  hs-source-dirs:     src
  main-is:            Main.hs
  other-modules:
      Widgets.Common.Editor
    , Widgets.Common.TabbedWindow
    , Widgets.Common
    , Widgets.Page.TwoWindow
    , Widgets.Page.TwoWindow.OutputWindow
    , Widgets.Page.TwoWindow.OutputWindow.ASTTab
    , Widgets.Page.TwoWindow.OutputWindow.JSEcho
    , Widgets.Page.TwoWindow.Style
    , Utils.Style
    , Utils.String
  build-depends:
      base
    , reflex
    , reflex-dom
    , text
    , baby-l4-core
    , reflex-dom-ace
    , jsaddle
    , jsaddle-dom
    , mtl

  default-extensions:
    DataKinds
    FlexibleContexts
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    RecursiveDo
    CPP
    MonoLocalBinds

  ghc-options:        -Wall -threaded

  if impl(ghcjs -any)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
    build-depends:
        ghcjs-dom-jsffi
      , ghcjs-base

  default-language:   Haskell2010

  if os(osx)
    ghc-options: -dynamic
